[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/objects/button.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/title.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="PlayButton" parent="." instance=ExtResource( 1 )]
position = Vector2( 261, 113 )
text = "Play"

[node name="CreditsButton" parent="." instance=ExtResource( 1 )]
position = Vector2( 263, 166 )
text = "Credits"

[node name="QuitButton" parent="." instance=ExtResource( 1 )]
position = Vector2( 264, 214 )
text = "Quit"

[node name="Label" type="Label" parent="."]
margin_left = 240.0
margin_top = 53.0
margin_right = 311.0
margin_bottom = 66.0
text = "TITLE SCREEN"
__meta__ = {
"_edit_use_anchors_": false
}
